name:                testCompiler3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/testCompiler3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable testCompiler3
  hs-source-dirs:      src
  other-modules:       Op
                     , IR
                     , Clojure
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
